crates/excelx-derive/tests/ui/enum.stderr
error: ExcelRow can only be derived for structs
 --> tests/ui/enum.rs:4:1
  |
4 | / enum RowKind {
5 | |     One,
6 | | }
  | |_^
