crates/excelx-derive/tests/ui/enum.rs
use excelx_derive::ExcelRow;

#[derive(ExcelRow)]
enum RowKind {
    One,
}

fn main() {}
